menu finalizado e adição de texto genérico em app.jsx

--- a/Front/vite-project/src/components/pages/Menu.css
+++ b/Front/vite-project/src/components/pages/Menu.css
@@ -7,6 +7,10 @@
 	font-family: "Titillium Web", sans-serif;
 }
 
+img{
+    width: 8vw;
+    border-radius: 50%;
+}
 :root {
 	--mainColor: #29335c;
 	--mainColorLight: #5767aa;
