--- a/Front/vite-project/src/index.css
+++ b/Front/vite-project/src/index.css
@@ -26,10 +26,11 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
-
+article{
+  margin-left: 5vw;
+  margin-right: 5vw;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
