--- a/Front/vite-project/src/index.css
+++ b/Front/vite-project/src/index.css
@@ -11,6 +11,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
 }
 
 a {
@@ -66,4 +68,24 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.cabecalho__logo, .cabecalho__mobile {
+  margin: 0.5em 1em
+
+}
+
+.cabecalho__logo {
+  height: 15%;
+  width: 15%;
+  border-radius: 50%;
+
+
+}
+
+.cabecalho__mobile {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
 }
