--- a/Front/vite-project/src/index.css
+++ b/Front/vite-project/src/index.css
@@ -15,45 +15,31 @@
 }
 
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-article{
-  margin-left: 5vw;
-  margin-right: 5vw;
-}
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-
 /*Mobile*/
+
+/*Agrupamento*/
+
+.cabecalho__mobile, .container, .subtitulo__programas, .botao__about {
+  font-family: var(--fonte-primaria);
+}
+
+.cabecalho__mobile, .principal, .programas, .subtitulo__programas {
+  color: var(--cor-branco-principal);
+}
+
+.botao__about, .container, .principal, .titulo__conheca, .titulo__programas, .programas {
+  padding: 0.5em;
+}
+
+.container, .principal, .programas {
+  width: 100vw;
+}
+
+
+.texto__principal, .lista__conheca, .lista__conheca__item {
+  margin: 0.5em;
+}
+
 /*Cabeçalho*/
 
 .cabecalho__mobile {
@@ -63,12 +49,12 @@ button:focus-visible {
   justify-content: space-evenly;
   align-items: center;
   list-style: none;
-  color: var(--cor-branco-principal);
-  font-family: var(--fonte-primaria);
+
+
 } 
 
 .cabecalho__mobile__item {
-  margin: 0.5em 0.75em
+  margin: 0.5em 0.75em;
 }
 
 .cabecalho__logo {
@@ -81,19 +67,17 @@ button:focus-visible {
 
 
 .container__imagem__home {
-  background-image: url("../src/assets/images/Animais/jaguatirica/jaquatirica_home.svg");
+  background-image: url("../src/assets/images/Animais/mamifero/jaguatirica/jaquatirica_home.svg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 40vh;
 }
 
 .botao__about {
-  font-family: var(--fonte-primaria);
   color: var(--cor-branco-frio);
   background-color: var(--cor-verde-escuro);
-  padding: 0.5em;
   position: relative;
-  margin-top: 17em;
+  margin-top: 20em;
   margin-left: 1em;
   border-radius: 0.5em;
 }
@@ -103,17 +87,13 @@ button:focus-visible {
   box-sizing: border-box;
   height: 35vh;
   background-color: var(--cor-escura-1);
-  width: 100vw;
-  font-family: var(--fonte-primaria);
-  padding: 0.5em;
+
   align-items: center;
 }
 
 .principal {
-  color: var(--cor-branco-principal);
   height: 30vh;
-  width: 100vw;
-  padding: 0.5em;
+
 }
 
 .titulo__principal {
@@ -128,7 +108,6 @@ button:focus-visible {
   font-weight: 400;
   text-align: center;
   padding: 0.85em;
-  margin: 0.5em;
   background-color: var(--cor-media);
   border-radius: 1.25em;
 }
@@ -143,14 +122,12 @@ button:focus-visible {
   font-size: 1.5rem;
   font-weight: 600;
   text-align: center;
-  padding: 0.5em;
   padding-bottom: 0;
 }
 
 .lista__conheca {
   display: flex;
   justify-content: space-between;
-  margin: 0.5em;
 }
 
 
@@ -160,7 +137,6 @@ button:focus-visible {
   width: 10em;
   height: 10m;
   background-color: var(--cor-media);
-  margin: 0.5em;
   padding: 1em;
   border-radius: 1em;
   text-align: center;
@@ -179,14 +155,44 @@ button:focus-visible {
   width: 80%;
 }
 
-.container__programas {
+.programas {
   display: block;
   box-sizing: border-box;
-  height: 35vh;
-  background-color: var(--cor-escura-1);
-  width: 100vw;
-  font-family: var(--fonte-primaria);
-  padding: 0.5em;
+  height: 180vh;
   align-items: center;
-  color: var(--cor-branco-principal)
+
+}
+
+.lista__programas {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.card {
+  display: block;
+  box-sizing: border-box;
+  text-align: center;
+  background-color: var(--cor-media);
+  height: 20em;
+  padding: 1em 0.5em;
+  margin: 1em;
+  border-radius: 1em;
+}
+
+.programas__item__imagem {
+  width: 90%;
+  height: 80%;
+  border-radius: 1em;
+  margin: 0.5em 0;
+}
+
+.subtitulo__programas {
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.aliado {
+  height: 60vh;
+  background-color: var(--cor-clara-1);
 }
