--- a/Front/vite-project/src/App.css
+++ b/Front/vite-project/src/App.css
@@ -1,7 +1,9 @@
-#root {
+body{
+  background-color: rgb(86, 55, 19);
 }
 article{
-
+text-align: center;
+color:aliceblue;
 }
 article img{
   text-align: center;
@@ -9,5 +11,9 @@ article img{
 @media screen and (max-width:1000px){
   img{
     width: 50vw;
+  }
+  *{
+    background-color: rgb(81, 81, 138);
+    font-size: 50vw;
   }
 }
