--- a/Front/vite-project/src/index.css
+++ b/Front/vite-project/src/index.css
@@ -1,3 +1,6 @@
+@import url("../src/static/header.css");
+@import url("../src/static/about.css");
+
 :root {
   --cor-branco-principal: #f6f6f6;
   --cor-branco-frio: hsl(0, 0%, 100%);
@@ -10,12 +13,18 @@
   --fonte-primaria: "Poppins", sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
-.container, .lista__conheca__item, .programas, .card  {
+.container, .lista__conheca__item,
+.programas, .card  {
   box-sizing: border-box;
 }
 
-.container,.principal,.programas, .botao__aliado, .botao__about {
+.container,.principal,.programas,
+.botao__aliado, .botao__about {
   padding: 0.5em;
 }
 
@@ -23,7 +32,8 @@
   padding: 0.25em;
 }
 
-.texto__principal, .lista__conheca, .lista__conheca__item, .cabecalho__mobile__item  {
+.texto__principal, .lista__conheca,
+.lista__conheca__item {
   margin: 0.25em;
 }
 
@@ -31,19 +41,27 @@
   height: 40vh;
 }
 
-.container,.principal,.programas, .aliado {
+.container,.principal,
+.programas, .aliado {
   width: 100vw;
 }
 
-.cabecalho__mobile, .subtitulo__programas, .botao__about, .titulo__conheca, .container,.principal,.programas, .botao__aliado, .botao__about {
+.subtitulo__programas, .botao__about,
+.titulo__conheca, .container,.principal,.programas,
+.botao__aliado, .botao__about {
   font-family: var(--fonte-primaria);
 }
 
-.titulo__principal, .titulo__conheca, .titulo__programas, .titulo__aliado, .lista__conheca__item__titulo, .botao__aliado, .lista__conheca__item__titulo, .botao__aliado {
+.titulo__conheca,.titulo__programas, 
+.titulo__aliado,.lista__conheca__item__titulo,
+.botao__aliado, .lista__conheca__item__titulo, 
+.botao__aliado {
   font-weight: 600;
 }
 
-.titulo__principal, .titulo__conheca, .titulo__programas, .titulo__aliado, .lista__conheca__item__titulo, .botao__aliado {
+.titulo__conheca, .titulo__programas, 
+.titulo__aliado, .lista__conheca__item__titulo, 
+.botao__aliado {
   font-size: 1.25rem;
   text-align: center;
 }
@@ -52,7 +70,9 @@
   font-size: 1rem;
 }
 
-.cabecalho__mobile, .subtitulo__programas, .titulo__principal, .botao__aliado, .botao__about, .container,.principal,.programas{
+.subtitulo__programas, 
+.botao__aliado, .botao__about, .container,
+.principal, .programas{
   color: var(--cor-branco-principal);
 }
 
@@ -78,19 +98,8 @@
   background-color: var(--cor-escura-1);
 }
 
-.cabecalho__mobile {
-  background-color: var(--cor-escura-2);
-  margin: 0;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
-}
-
-.cabecalho__logo {
-  height: 10%;
-  width: 10%;
-  border-radius: 50%;
+.titulo__conheca, .titulo__programas {
+  padding-bottom: 0;
 }
 
 .container__imagem__home {
@@ -126,10 +135,6 @@
   background-color: var(--cor-clara-1);
 }
 
-.titulo__conheca, .titulo__programas {
-  padding-bottom: 0;
-}
-
 .lista__conheca {
   display: flex;
   justify-content: space-between;
@@ -159,7 +164,6 @@
   height: 165vh;
   align-items: center;
   justify-content: center;
-
 }
 
 .lista__programas {
@@ -223,25 +227,19 @@
     border-radius: 1em;
   }
   
-  .texto__principal, .lista__conheca, .lista__conheca__item, .botao__aliado {
+  .texto__principal, .lista__conheca, 
+  .lista__conheca__item, .botao__aliado {
     margin: 0.5em;
   }
-  
-  .titulo__principal, .titulo__conheca, .titulo__programas, .titulo__aliado {
+
+  .titulo__conheca, .titulo__programas,
+  .titulo__aliado {
     font-size: 1.5rem;
   }
 
   .subtitulo__programas, .botao__aliado {
     font-size: 1.25rem;
   }
-  
-  .cabecalho__mobile {
-    justify-content: space-evenly;
-  } 
-  
-  .cabecalho__mobile__item {
-    margin: 0.5em 0.75em;
-  } 
   
   .container__imagem__home {
     height: 40vh;
@@ -276,12 +274,9 @@
 }
 
 @media screen and (min-width: 400px) {
-
-  .titulo__principal, .titulo__conheca, .titulo__programas, .titulo__aliado {
-    font-size: 1.5rem;
-  }
  
-  .subtitulo__programas, .botao__aliado, .texto__principal  {
+  .subtitulo__programas, .botao__aliado, 
+  .texto__principal  {
     font-size: 1.125rem;
   }
 
@@ -305,7 +300,8 @@
 
 @media screen and (min-width: 430px) {
  
-  .subtitulo__programas, .botao__aliado, .texto__principal  {
+  .subtitulo__programas, .botao__aliado, 
+  .texto__principal  {
     font-size: 1.25rem;
   }
 
@@ -315,20 +311,20 @@
 
  .aliado {
   height: 65vh;
-}
-   
+}   
 }
 
 @media screen and (min-width: 500px) {
 
-  .titulo__principal, .titulo__conheca, .titulo__programas, .titulo__aliado {
+  .titulo__conheca, .titulo__programas, 
+  .titulo__aliado {
     font-size: 1.5rem;
   }
  
-  .subtitulo__programas, .botao__aliado, .texto__principal  {
+  .subtitulo__programas, .botao__aliado, 
+  .texto__principal {
     font-size: 1rem;
   }
-
 
   .botao__about {
     margin: 30em 0 0 0.75em;
@@ -385,12 +381,8 @@
 
 @media screen and (min-width: 700px) {
 
-.cabecalho__mobile, .texto__principal, .titulo__aliado {
+.texto__principal, .titulo__aliado {
   padding: 0.5em;
-}
-
-.cabecalho__mobile__item, .card  {
-  margin: 0.5em;
 }
 
 .container, .conheca {
@@ -405,12 +397,9 @@
   background-color: var(--cor-clara-2);
 }
 
-.titulo__principal, .titulo__conheca, .titulo__programas, .lista__conheca__item__titulo {
+.titulo__conheca, 
+.titulo__programas, .lista__conheca__item__titulo {
   font-size: 2rem;
-}
-
-.cabecalho__mobile {
-  justify-content: space-between;
 }
 
 .botao__about {
@@ -443,6 +432,10 @@
 .programas {
   display: block;
   height: 60vh;
+}
+
+.card  {
+  margin: 0.5em;
 }
 
 .programas__item__imagem {
